syntax = "proto3";

package auth;

import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Snake1-1eyes/auth-service-it/pkg/auth";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/v1/auth/signup"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
}

message SignUpRequest {
  string login = 1 [(validate.rules).string.min_len = 3];
  string password = 2 [(validate.rules).string.min_len = 6];
}

message SignUpResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string login = 1 [(validate.rules).string.min_len = 3];
  string password = 2 [(validate.rules).string.min_len = 6];
}

message LoginResponse {
  string session_id = 1;
}
